@@ -7,14 +7,15 @@
     <parent>
         <groupId>io.mosip.pms</groupId>
         <artifactId>pms-parent</artifactId>
-        <version>1.2.1-SNAPSHOT</version>
+        <version>1.3.0-beta.1-SNAPSHOT</version>
     </parent>
     <artifactId>policy-validator</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.3.0-beta.1-SNAPSHOT</version>
     <name>policy-validator</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <json.schema.validator.version>2.2.14</json.schema.validator.version>
+        <jacoco.maven.plugin.version>0.8.11</jacoco.maven.plugin.version>
     </properties>
     <dependencies>
         <dependency>
@@ -57,6 +58,39 @@
                     <commitIdGenerationMode>full</commitIdGenerationMode>
                     <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
                     <!-- <format>json</format> -->
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.maven.plugin.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+                <configuration>
+                    <skipTests>false</skipTests>
+                    <skip>false</skip>
+                    <argLine>
+                        ${argLine} --add-opens
+                        java.xml/jdk.xml.internal=ALL-UNNAMED
+                        --illegal-access=permit
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
